# appwrite_openapi

./: Cargo.toml  README.first.md  README.generated.md  README.md
.openapi-generator/: FILES
docs/: AccountApi.md  AccountCreateRecoveryRequest.md  AccountCreateVerificationRequest.md  AccountUpdateEmailRequest.md  AccountUpdateNameRequest.md  AccountUpdatePasswordRequest.md  AccountUpdatePhoneRequest.md  AccountUpdatePrefsRequest.md  AccountUpdateRecoveryRequest.md  AccountUpdateVerificationRequest.md  AlgoArgon2.md  AlgoBcrypt.md  AlgoMd5.md  AlgoPhpass.md  AlgoScrypt.md  AlgoScryptModified.md  AlgoSha.md  AttributeBoolean.md  AttributeDatetime.md  AttributeEmail.md  AttributeEnum.md  AttributeFloat.md  AttributeInteger.md  AttributeIp.md  AttributeList.md  AttributeRelationship.md  AttributeString.md  AttributeUrl.md  AvatarsApi.md  Bucket.md  BucketList.md  Collection.md  CollectionList.md  Continent.md  ContinentList.md  Country.md  CountryList.md  Currency.md  CurrencyList.md  Database.md  (+100 more)
src/apis/: account_api.rs  avatars_api.rs  configuration.rs  databases_api.rs  functions_api.rs  graphql_api.rs  health_api.rs  locale_api.rs  mod.rs  storage_api.rs  teams_api.rs  users_api.rs
src/models/: account_create_recovery_request.rs  account_create_verification_request.rs  account_update_email_request.rs  account_update_name_request.rs  account_update_password_request.rs  account_update_phone_request.rs  account_update_prefs_request.rs  account_update_recovery_request.rs  account_update_verification_request.rs  algo_argon2.rs  algo_bcrypt.rs  algo_md5.rs  algo_sha.rs  (+118 more)
